Expose cardinal Dogecoin funding proofs
